--- a/touchkit-compatibility/pom.xml
+++ b/touchkit-compatibility/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.vaadin.touchkit</groupId>
     <artifactId>touchkit-compatibility</artifactId>
-    <version>5.0.0.beta2</version>
+    <version>5.0.5-jsoup</version>
     <packaging>jar</packaging>
     <name>TouchKit-Compatibility</name>
     <organization>
@@ -81,8 +81,8 @@
     </licenses>
     <properties>
     
-        <vaadin.version.maven>8.0.0</vaadin.version.maven>
-        <vaadin.plugin.version>8.0.0</vaadin.plugin.version>
+        <vaadin.version.maven>8.18.0</vaadin.version.maven>
+        <vaadin.plugin.version>8.18.0</vaadin.plugin.version>
         <snapshot.repository.url>http://oss.sonatype.org/content/repositories/vaadin-snapshots/</snapshot.repository.url>
         <jetty.version>9.2.14.v20151106</jetty.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -210,7 +210,7 @@
         <dependency>
             <groupId>org.vaadin.touchkit</groupId>
             <artifactId>touchkit</artifactId>
-            <version>5.0.0.beta2</version>
+            <version>5.0.5-jsoup</version>
         </dependency>
         <!-- This ought to be transient dependency from Vaadin? -->
         <dependency>
